# tauri-sveltekit-template

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: publish.yml  release.yml  test.yml
src/: App.svelte  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build.rs  main.rs  menu.rs
src/routes/: +page.svelte
